; ModuleID = '/home/carl/AnghaBench/gb-studio/buildTools/win32-x64/gbdk/examples/gb/extr_galaxy.c_tile_sprite.c'
source_filename = "/home/carl/AnghaBench/gb-studio/buildTools/win32-x64/gbdk/examples/gb/extr_galaxy.c_tile_sprite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sframe = common dso_local global i32 0, align 4
@earth_tiles = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tile_sprite() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @sframe, align 4
  %3 = shl i32 %2, 1
  %4 = sext i32 %3 to i64
  store i64 %4, i64* %1, align 8
  %5 = load i32*, i32** @earth_tiles, align 8
  %6 = load i64, i64* %1, align 8
  %7 = getelementptr inbounds i32, i32* %5, i64 %6
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @set_sprite_tile(i32 0, i32 %8)
  %10 = load i32*, i32** @earth_tiles, align 8
  %11 = load i64, i64* %1, align 8
  %12 = add i64 %11, 1
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @set_sprite_tile(i32 1, i32 %14)
  ret void
}

declare dso_local i32 @set_sprite_tile(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
